--- a/tema3/client/src/app/nav-bar/nav-bar.component.html
+++ b/tema3/client/src/app/nav-bar/nav-bar.component.html
@@ -1,11 +1,7 @@
-<mat-toolbar color="primary">
-  <span>Application Title</span>
-
-  <!-- This fills the remaining space of the current row -->
-  <span class="example-fill-remaining-space"></span>
-
-  <span>
-    <a href="/">Register</a>
-    <a href="/">Login</a>
-  </span>
+<mat-toolbar color="primary" class="nav-bar">
+  <div>The Boyz</div>
+  <div>
+    <a href="/register">Register</a>
+    <a href="/login">Login</a>
+  </div>
 </mat-toolbar>
