--- a/tema3/client/src/app/nav-bar/nav-bar.component.html
+++ b/tema3/client/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="nav-bar">
   <div>The Boyz</div>
   <div>
-    <a href="/register">Register</a>
-    <a href="/login">Login</a>
+    <button mat-button (click)="openRegisterDialog()">Register</button>
+    <button mat-button (click)="openLoginDialog()">Login</button>
   </div>
 </mat-toolbar>
