--- a/tema3/client/src/app/users/user-profile-edit/user-profile-edit.component.html
+++ b/tema3/client/src/app/users/user-profile-edit/user-profile-edit.component.html
@@ -1,1 +1,25 @@
-<p>user-profile-edit works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-2">
+        first
+      </div>
+      <div class="col-8">
+        <h1>Your profile</h1>
+
+        <form>
+          <mat-form-field>
+            <mat-label>First name</mat-label>
+            <input matInput >
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Last name</mat-label>
+            <input matInput >
+          </mat-form-field>
+          <button mat-raised-button>Submit</button>
+        </form>
+      </div>
+      <div class="col-2">
+        second
+      </div>
+    </div>
+  </div>
