--- a/tema3/client/src/app/login/login.component.html
+++ b/tema3/client/src/app/login/login.component.html
@@ -20,5 +20,5 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button color="primary">Login</button>
+  <button (click)="login()" mat-button color="primary">Login</button>
 </mat-dialog-actions>
