--- a/tema3/client/src/app/register/register.component.html
+++ b/tema3/client/src/app/register/register.component.html
@@ -5,7 +5,7 @@
       <tr>
         <td>
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+            <input matInput placeholder="Email" [(ngModel)]="email" name="email" required>
           </mat-form-field>
         </td>
       </tr>
@@ -27,5 +27,5 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button color="primary">Register</button>
+  <button mat-button color="primary" (click)="register()">Register</button>
 </mat-dialog-actions>
