--- a/tema3/client/src/app/users/users-list/users-list.component.html
+++ b/tema3/client/src/app/users/users-list/users-list.component.html
@@ -3,7 +3,9 @@
     <div class="user-img">
       <div class="user-name">{{user.email}}</div>
     </div>
-    <div>Inregistrare aici</div>
+    <audio src="https://docs.google.com/uc?export=download&id=1ORxK0_UOSsxbNFVVLdrNI55AJD8NBplE" controls>
+      Your browser does not support the audio element.
+    </audio>
     <mat-nav-list>
       <div class="games-list" *ngFor="let game of user.games">
         <div class="game">
