--- a/tema3/client/src/app/users/users-list/users-list.component.html
+++ b/tema3/client/src/app/users/users-list/users-list.component.html
@@ -1,12 +1,23 @@
 <div class="flex-wrapper">
-  <div class="user" *ngFor="let user of users" (click)="goTo('/users/' + user.email + '/profile')">
-    <div class="user-img">
-      <div class="user-name">{{user.email}}</div>
+  <div class="user" *ngFor="let user of users" (click)="goTo('/users/' + user.uid + '/profile')">
+    <div class="user-img" style="
+    background-image: url({{user.photoUrl}});
+     width: 300px;
+    height: 300px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center center;">
     </div>
-    <audio src="https://docs.google.com/uc?export=download&id=1ORxK0_UOSsxbNFVVLdrNI55AJD8NBplE" controls>
-      Your browser does not support the audio element.
-    </audio>
-    <mat-nav-list>
+    <div class="user-name">{{user.nickname}}</div>
+    <!--    <audio src="https://docs.google.com/uc?export=download&id=1ORxK0_UOSsxbNFVVLdrNI55AJD8NBplE" controls>-->
+    <div *ngIf="user.audioUrl!=null && user.audioUrl!=''; else noAudioBlock">
+      <audio [src]="user.audioUrl" controls>
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+    <ng-template #noAudioBlock>No audio available</ng-template>
+    <!--    todo: add games-->
+    <!--<mat-nav-list>
       <div class="games-list" *ngFor="let game of user.games">
         <div class="game">
           <img class="game-pic" matCardImage
@@ -14,6 +25,6 @@
           {{game}}
         </div>
       </div>
-    </mat-nav-list>
+    </mat-nav-list>-->
   </div>
 </div>
