--- a/tema3/client/src/app/users/user-profile-edit/user-profile-edit.component.scss
+++ b/tema3/client/src/app/users/user-profile-edit/user-profile-edit.component.scss
@@ -28,3 +28,15 @@
 .recording-time {
   margin: auto auto auto 8px;
 }
+
+.games-list{
+  display: flex;
+  flex-direction: column;
+}
+
+.game-pic {
+  margin-left: 5px;
+  margin-right: 5px;
+  width:35px;
+  height: 35px;
+}
