--- a/Project_The_Boyz/client/src/app/app.component.html
+++ b/Project_The_Boyz/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
-<ng-chat *ngIf="userId !==''" [adapter]="adapter" [userId]="userId"
-        [title]="'Orders'" [isDisabled]="false" [pollFriendsList]="true"
-        ></ng-chat>
+<ng-chat #ngChatInstance *ngIf="userId !==''" [adapter]="adapter" [userId]="userId"
+         [title]="'Orders'" [isDisabled]="false"></ng-chat>
+
