finished order status update forms

--- a/Project_The_Boyz/client/src/app/nav-bar/nav-bar.component.html
+++ b/Project_The_Boyz/client/src/app/nav-bar/nav-bar.component.html
@@ -11,6 +11,9 @@
         {{profileNickname}}
 
       </button>
+      <button *ngIf="currentUser && currentUser.isAdmin" mat-button (click)="goTo('/admin/reportedOrders')">
+        Admin
+      </button>
       <button mat-button (click)="logOut()">Log Out</button>
     </div>
   </ng-template>
