--- a/Project_The_Boyz/client/src/app/admin/reportedOrders/reported-order-info/reported-order-info.component.html
+++ b/Project_The_Boyz/client/src/app/admin/reportedOrders/reported-order-info/reported-order-info.component.html
@@ -55,6 +55,7 @@
         </div>
         &nbsp;: {{message.message}}
       </div>
+      <button class="title" mat-raised-button (click)="markAsFinished()" style="width: 100%;margin-top: 10px">Mark as finished</button>
     </mat-list>
   </mat-card>
 </div>
